--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,6 @@ python:
 # install: "pip install -r requirements.txt"
 # command to run tests
 script: python ./src/LineByLineMergeTest.py
+addons:
+    code_climate:
+        repo_token: 49d8566533c8d2cc3d3eb380ea26879c2ad445c2ab3722e0e958ca0694bfd894
